# phosphor-logging

./: .clang-tidy  .gitignore  MAINTAINERS  Makefile.am  Makefile.interfaces  OWNERS  README-Error.md  README.md  Readme-error.md  bmc_pos_mgr.cpp  bmc_pos_mgr.hpp  bmc_pos_path.cpp  bmc_pos_path.hpp  bootstrap.sh  callouts-gen.hpp  config.h.meson  config_main.h  configure.ac  constants.hpp  cper_diagnostics.cpp  cper_diagnostics.hpp  elog-errors-HostEvent.hpp  elog-errors.hpp  elog-gen-template  elog-gen-template.mako.hpp  elog-gen.hpp  elog-gen.py  elog-lookup-template.mako.hpp  elog-lookup.cpp  elog-process-metadata.cpp  elog.cpp  elog.hpp  elog.yaml  elog_block.hpp  elog_entry.cpp  elog_entry.hpp  elog_entry_main.cpp  elog_meta.cpp  elog_meta.hpp  elog_parser.py  (+32 more)
config/: config.h.meson  constants.hpp  meson.build
debug-monitor/: debug-monitor.cpp  debug-monitor.service.in  meson.build
example/audit_api/: audit_api_usage.cpp  meson.build
example/audit_daemon/: audit.json  meson.build
example/audit_daemon/include/: audit_common.hpp  audit_config.hpp  audit_manager.hpp  auditd.hpp  linux_audit.hpp  meson.build
example/audit_daemon/src/: audit_config.cpp  audit_main.cpp  audit_manager.cpp  auditd.cpp  linux_audit.cpp  server.cpp
extensions/amd-event-log/src/: ael_info.cpp  amd_afid_utils.cpp  entry_points.cpp  meson.build
extensions/amd-event-logging/: README.md  amd_log_manager.cpp  amd_log_manager.hpp  main.cpp  meson.build
extensions/amd-event-logging/service/: amd-log-manager.service
extensions/openpower-pels/: README.md  additional_data.hpp  ascii_string.cpp  ascii_string.hpp  bcd_time.cpp  bcd_time.hpp  callout.cpp  callout.hpp  callouts.cpp  callouts.hpp  data_interface.cpp  data_interface.hpp  dbus_types.hpp  dbus_watcher.hpp  device_callouts.cpp  device_callouts.hpp  entry_points.cpp  event_logger.hpp  extended_user_data.cpp  extended_user_data.hpp  extended_user_header.cpp  extended_user_header.hpp  failing_mtms.cpp  failing_mtms.hpp  fapi_data_process.cpp  fapi_data_process.hpp  fru_identity.cpp  fru_identity.hpp  generic.cpp  generic.hpp  hexdump.cpp  hexdump.hpp  host_interface.hpp  host_notifier.cpp  host_notifier.hpp  journal.cpp  journal.hpp  json_utils.cpp  json_utils.hpp  log_id.cpp  (+58 more)
extensions/openpower-pels/pel_registry/: __init__.py
extensions/openpower-pels/registry/: B_component_ids.json  ComponentIDs.md  O_component_ids.json  README.md  message_registry.json  run-ci.sh
extensions/openpower-pels/registry/schema/: registry_example.json  schema.json
extensions/openpower-pels/registry/tools/: process_registry.py  validate_registry.py
extensions/openpower-pels/tools/: .peltool.cpp.swo  pelparser.cpp  pelparser.hpp  peltool.cpp  peltool.hpp  peltool_utility.cpp  peltool_utility.hpp  peltoolutils.cpp  peltoolutils.hpp  samplepel.hpp
lib/: audit.cpp  elog.cpp  lg2_commit.cpp  lg2_commit.hpp  lg2_logger.cpp  meson.build  sdjournal.cpp
lib/include/phosphor-logging/: a.out  commit.hpp  elog.hpp  lg2.hpp  log.hpp  main.cpp  meson.build  message-registries.hpp  sdjournal.hpp
lib/include/phosphor-logging/audit/: audit.hpp
lib/include/phosphor-logging/lg2/: commit.hpp  concepts.hpp  conversion.hpp  flags.hpp  header.hpp  level.hpp  logger.hpp  source_location.hpp
lib/include/phosphor-logging/message-registries/: AccountSecurity.1.0.0.hpp  Base.1.0.0.hpp  Base.1.10.0.hpp  Base.1.10.1.hpp  Base.1.10.2.hpp  Base.1.10.3.hpp  Base.1.11.0.hpp  Base.1.11.1.hpp  Base.1.11.2.hpp  Base.1.12.0.hpp  Base.1.12.1.hpp  Base.1.12.2.hpp  Base.1.13.0.hpp  Base.1.14.0.hpp  Base.1.15.0.hpp  Base.1.16.0.hpp  Base.1.17.0.hpp  Base.1.17.1.hpp  Base.1.18.0.hpp  Base.1.18.1.hpp  Base.1.19.0.hpp  Base.1.19.1.hpp  Base.1.2.0.hpp  Base.1.20.0.hpp  Base.1.3.0.hpp  Base.1.3.1.hpp  Base.1.4.0.hpp  Base.1.4.1.hpp  Base.1.5.0.hpp  Base.1.5.1.hpp  Base.1.6.0.hpp  Base.1.6.1.hpp  Base.1.6.2.hpp  (+80 more)
phosphor-audit/: audit_handler.hpp  audit_main.cpp  audit_manager.cpp  audit_manager.hpp  file.cpp  file.hpp  meson.build  utils.cpp  utils.hpp
phosphor-audit/services/: xyz.openbmc_project.Logging.Audit.service
phosphor-logging/: elog-errors-HostEvent.hpp  elog-errors.hpp  elog.hpp  log.hpp  meson.build  sdjournal.hpp
phosphor-logging/test/: sdjournal_mock.hpp
phosphor-rsyslog-config/: Makefile.am  main.cpp  meson.build  server-conf.cpp  server-conf.hpp  utils.hpp
test/: Makefile.am  basic_event_commit.cpp  bmc_pos_fixture.hpp  bmc_pos_mgr_test.cpp  bmc_pos_path.cpp  bmc_pos_test_utils.hpp  common.cpp  cper_diagnostics_test.cpp  elog_errorwrap_test.cpp  elog_errorwrap_test.hpp  elog_quiesce_test.cpp  elog_unittest.cpp  elog_unittest.hpp  elog_update_ts_test.cpp  extensions_test.cpp  log_manager_dbus_tests.cpp  log_manager_rbmc_sync_test.cpp  logging_test.cpp  meson.build  remote_logging_test_address.cpp  remote_logging_test_config.cpp  remote_logging_test_port.cpp  remote_logging_tests.hpp  serialization_test_json.cpp  serialization_test_path.cpp  serialization_test_properties.cpp  serialization_tests.hpp  test_log_manager.cpp
test/openpower-pels/: Makefile.include  additional_data_test.cpp  ascii_string_test.cpp  bcd_time_test.cpp  data_interface_test.cpp  device_callouts_test.cpp  event_logger_test.cpp  extended_user_data_test.cpp  extended_user_header_test.cpp  failing_mtms_test.cpp  fru_identity_test.cpp  generic_section_test.cpp  host_notifier_test.cpp  json_utils_test.cpp  log_id_test.cpp  meson.build  mocks.hpp  mru_test.cpp  mtms_test.cpp  paths.cpp  pce_identity_test.cpp  pel_manager_test.cpp  pel_paths.cpp  pel_test.cpp  pel_utils.cpp  pel_utils.hpp  pel_values_test.cpp  peltool_test.cpp  private_header_test.cpp  real_pel_test.cpp  registry_test.cpp  repository_test.cpp  section_header_test.cpp  service_indicators_test.cpp  severity_test.cpp  src_callout_test.cpp  src_callouts_test.cpp  src_test.cpp  stream_test.cpp  temporary_file_test.cpp  (+2 more)
tools/phosphor-logging/templates/: elog-gen-template.mako.hpp  elog-lookup-template.mako.cpp  elog-process-metadata.cpp.mako  elog-process-metadata.mako.cpp  event-filter.cpp.mako  event-filter.mako.cpp  meson.build
(+72 files in other folders)
