option('tests', type: 'feature', description: 'Build tests')
option(
    'openpower-pel-extension',
    type: 'feature',
    description: 'Create PELs',
    value: 'disabled'
)

option('yamldir', type: 'string', description: 'Path to YAML')
option(
    'callout_yaml',
    type: 'string',
    value: 'callouts/callouts-example.yaml',
    description: 'Path to Callout YAML',
)

option(
    'error_cap',
    type: 'integer',
    value: 200,
    description: 'Max number of error enttries allowed for commit',
)
option(
    'error_info_cap',
    type: 'integer',
    value: 10,
    description: 'Cap on informational (and below) severity errors',
)

option(
    'phal',
    type: 'feature',
    value: 'disabled',
    description: 'Enable support for PHAL',
)

option(
    'pdbg_dtb_path',
    type: 'string',
    value: '"/var/lib/phosphor-software-manager/pnor/rw/DEVTREE"',
    description: 'PDBG device tree path environment variable',
)
